--- a/ProjectTimeManager.Model/ProjectTimeManager.Model.csproj
+++ b/ProjectTimeManager.Model/ProjectTimeManager.Model.csproj
@@ -42,7 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityBase.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="Project.cs" />
+    <Compile Include="ProjectMember.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeTrack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
