Prikaz vremena po projektu

--- a/ProjectTimeManager/ProjectTimeManager.csproj
+++ b/ProjectTimeManager/ProjectTimeManager.csproj
@@ -156,6 +156,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\ProjectMemberStatVM.cs" />
+    <Compile Include="Models\ProjectTimeVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
